@@ -49,5 +49,7 @@
     the plugin and man pages.
 
 * v1.3 ()
+  - New checks:
+    connect-3arg-lambda
   - missing-qobject-macro is now a level2 check, instead of level1. Because,
     people can omit Q_OBJECT intentionally.
